1)add product service 2)Add interface 3) extra the GetPageSum with Generic

--- a/day1_HomeworkCls/day1_HomeworkCls.csproj
+++ b/day1_HomeworkCls/day1_HomeworkCls.csproj
@@ -39,8 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IPageService.cs" />
+    <Compile Include="IService.cs" />
     <Compile Include="OrderModel.cs" />
     <Compile Include="OrderService.cs" />
+    <Compile Include="PageSumHelper.cs" />
+    <Compile Include="ProductModel.cs" />
+    <Compile Include="ProductService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
