--- a/day1_HomeworkClsTests/day1_HomeworkClsTests.csproj
+++ b/day1_HomeworkClsTests/day1_HomeworkClsTests.csproj
@@ -55,6 +55,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="OrderPageServiceTests.cs" />
+    <Compile Include="PageSumHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
